# thesis-graphrag-skills

./: README.md
Data processing/: README.md  spain_names.csv
Data processing/json_processing/: pyproject.toml
Data processing/json_processing/output/anonymized/: 13.json  19.json  20.json  21.json  22.json  25.json  28.json  29.json  32.json  35.json  36.json  38.json  42.json  43.json  47.json  50.json  51.json  52.json  53.json  54.json  7.json
Data processing/json_processing/scripts/: anonymize.py  deanonymize.py  degree_classifier.py  experience_classifier.py  flatten_jsons.py  main.py  utils.py
Docker/: Dockerfile  README.md  pyproject.toml
Docker/src/: skills.json  st_front.py  storage.py
Graph Analysis/: gephi_table.ipynb  graph.csv
GraphRAG/: settings.yaml
GraphRAG/cache/community_reporting/: chat_create_community_report_009adcb43aea2e0d40d143ef17fd93a5bb800feecf0767900d490beea412e00a_v2  (+498 more)
GraphRAG/input/: 1.json  10.json  11.json  12.json  14.json  15.json  16.json  17.json  18.json  2.json  23.json  24.json  26.json  27.json  3.json  30.json  31.json  33.json  34.json  37.json  39.json  4.json  40.json  41.json  44.json  45.json  46.json  48.json  49.json  5.json  6.json  8.json  9.json
GraphRAG/logs/: logs.json
GraphRAG/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  graph.graphml  relationships.parquet  stats.json  text_units.parquet
GraphRAG/prompts/: entity_extraction.txt  extract_graph.txt
Scrooge/ragtest/: settings.yaml
(+2204 files in other folders)
