[tool.poetry]
name = "graphiculum"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.32.0"
azure-storage-blob = "^12.19.0"
python-dotenv = "^1.1.0"
streamlit-modal = "^0.1.2"
cryptography = "^41.0.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"